# treebot_interfaceboard_sw_linux

./: .gitignore  Doxyfile  implementation_plan.md  readme.md  walkthrough.md
.github/workflows/: cross-compile.yml  performance.yml  test.yml  unit-tests.yml
cmake/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
docs/: .gitkeep  API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  PERFORMANCE_NOTES.md  PROTOCOL.md  README.md  TROUBLESHOOTING.md  orbbec_fps_troubleshooting.md
docs/robot_cleaning_architecture/: 01_ros2_node_architecture.md  02_ros2_detailed_design.md  03_custom_messages.md  04_robot_interfaces_package.md  05_interface_naming_conventions.md  06_task_skill_bt_spec.md  07_vla_hybrid_control.md  08_state_machine_bt_design.md  09_product_management.md  10_glossary.md  README.md
ros2_benchmark/gemini330_gpu_bench/: CMakeLists.txt  README.md  camera_benchmark_node.py  package.xml
ros2_benchmark/gemini330_gpu_bench/config/: orbbec_dual_camera.yaml
ros2_benchmark/gemini330_gpu_bench/launch/: dual_camera_bench.launch.py
ros2_benchmark/gemini330_gpu_bench/src/: gpu_upload_node.cpp
scripts/: fps_latency_bw_monitor.py  monitor_gpu_resources.sh  orbbec_fps_diagnose.sh  run_camera_benchmark.sh  run_fps_latency_monitor.sh
scripts/cross-compile/: build.sh  verify_arm_binary.sh
seeway_interface_driver/: CMakeLists.txt  package.xml
seeway_interface_driver/config/: seeway_interface.yaml  seeway_ros2_control.yaml
seeway_interface_driver/include/seeway_interface_driver/: comm_handler.hpp  driver_node.hpp  protocol.hpp  transport.hpp
seeway_interface_driver/launch/: seeway_interface.launch.py
seeway_interface_driver/src/: comm_handler.cpp  driver_node.cpp  serial_transport.cpp  tcp_client_transport.cpp  tcp_server_transport.cpp
seeway_interface_hardware/: CMakeLists.txt  package.xml  seeway_hardware_interface.xml
seeway_interface_hardware/include/seeway_interface_hardware/: seeway_hardware_interface.hpp
seeway_interface_hardware/src/: seeway_hardware_interface.cpp
seeway_interface_msgs/: CMakeLists.txt  package.xml
seeway_interface_msgs/msg/: BatteryStatus.msg  GpioStatus.msg  InputEvent.msg  SensorData.msg  SystemStatus.msg
seeway_interface_msgs/srv/: PowerControl.srv  SendTask.srv  SetGpio.srv  SetPwm.srv
t113i_daemon/: CMakeLists.txt  Doxyfile
t113i_daemon/build_ci/: CMakeCache.txt  Makefile  cmake_install.cmake  seeway_interface_daemon
t113i_daemon/build_ci/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  integration_test_error_recovery[1]_include.cmake  integration_test_error_recovery[1]_tests.cmake  integration_test_long_running[1]_include.cmake  integration_test_long_running[1]_tests.cmake  integration_test_protocol_compliance[1]_include.cmake  integration_test_protocol_compliance[1]_tests.cmake  integration_test_tcp_loopback[1]_include.cmake  integration_test_tcp_loopback[1]_tests.cmake  perf_logging  perf_main_loop  perf_memory  perf_task_execution  test_config_loader[1]_include.cmake  test_config_loader[1]_tests.cmake  test_connection_monitor[1]_include.cmake  test_connection_monitor[1]_tests.cmake  test_logger[1]_include.cmake  test_logger[1]_tests.cmake  test_module_initializer[1]_include.cmake  test_module_initializer[1]_tests.cmake  test_protocol[1]_include.cmake  test_protocol[1]_tests.cmake  test_task_manager[1]_include.cmake  test_task_manager[1]_tests.cmake  test_utils[1]_include.cmake  test_utils[1]_tests.cmake
t113i_daemon/cmake/: arm-linux-gnueabihf.cmake
t113i_daemon/config/: daemon.conf
t113i_daemon/include/: config_loader.h  connection_monitor.h  gpio_controller.h  input_handler.h  logger.h  module_initializer.h  power_manager.h  protocol.h  sensor_reader.h  serial_comm.h  shutdown_manager.h  task_executor.h  utils.h
t113i_daemon/scripts/cross-compile/: build.sh  verify_arm_binary.sh
t113i_daemon/src/: config_loader.cpp  connection_monitor.cpp  gpio_controller.cpp  input_handler.cpp  logger.cpp  main.cpp  power_manager.cpp  sensor_reader.cpp  serial_comm.cpp  shutdown_manager.cpp  task_executor.cpp
t113i_daemon/tests/: CMakeLists.txt  performance_report.py  run_all_tests.sh
t113i_daemon/tests/fixtures/: sample_daemon.conf
t113i_daemon/tests/integration/: integration_test_error_recovery.cpp  integration_test_long_running.cpp  integration_test_protocol_compliance.cpp  integration_test_tcp_loopback.cpp  mock_jetson_server.py
t113i_daemon/tests/mocks/: mock_gpio_controller.h  mock_serial_comm.h  mock_task_executor.h
t113i_daemon/tests/perf/: perf_logging.cpp  perf_main_loop.cpp  perf_memory.cpp  perf_task_execution.cpp
t113i_daemon/tests/unit/: test_config_loader.cpp  test_connection_monitor.cpp  test_logger.cpp  test_module_initializer.cpp  test_protocol.cpp  test_task_manager.cpp  test_utils.cpp
tests/: CMakeLists.txt  performance_report.py  run_all_tests.sh
tests/integration/: integration_test_error_recovery.cpp  integration_test_long_running.cpp  integration_test_protocol_compliance.cpp  integration_test_tcp_loopback.cpp  mock_jetson_server.py
tests/perf/: perf_logging.cpp  perf_main_loop.cpp  perf_memory.cpp  perf_task_execution.cpp
tests/unit/: test_config_loader.cpp  test_connection_monitor.cpp  test_logger.cpp  test_module_initializer.cpp  test_protocol.cpp  test_task_manager.cpp  test_utils.cpp
