<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seeway_interface_hardware</name>
  <version>0.1.0</version>
  <description>ros2_control system interface bridging ROS2 to T113i driver node</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>seeway_interface_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
